--- a/k8s.yaml
+++ b/k8s.yaml
@@ -12,16 +12,16 @@ machines:
   '2':
     constraints: cores=1 mem=2G root-disk=12G
     series: bionic
-  #'3':
-    #constraints: cores=1 mem=2G root-disk=15G
-    #series: bionic
+  '3':
+    constraints: cores=1 mem=2G root-disk=12G
+    series: bionic
 
 services:
   # Containerd is used as container runtime
-  #containerd:
-  #  charm: cs:~containers/containerd
-  docker:
-    charm: cs:~containers/docker-4
+  containerd:
+    charm: cs:~containers/containerd
+  #docker:
+  #  charm: cs:~containers/docker-4
   easyrsa:
     charm: cs:~containers/easyrsa
     num_units: 1
@@ -29,17 +29,17 @@ services:
     - lxd:0
   etcd:
     charm: cs:~containers/etcd
-    num_units: 3
+    num_units: 1
     options:
       channel: 3.2/stable
     to:
     - 0
-    - 1
-    - 2
   kubeapi-load-balancer:
     charm: cs:~containers/kubeapi-load-balancer
     expose: true
     num_units: 1
+    to:
+    - 0
   kubernetes-master:
     charm: cs:~containers/kubernetes-master-700
     num_units: 1
@@ -51,14 +51,14 @@ services:
   kubernetes-worker:
     charm: cs:~containers/kubernetes-worker-552
     expose: true
-    num_units: 2
+    num_units: 3
     options:
-      ingress: false
+      ingress: true
       channel: *kubernetes-channel
     to:
     - 1
     - 2
-    #- 3
+    - 3
 relations:
 - - kubernetes-master:kube-api-endpoint
   - kubeapi-load-balancer:apiserver
@@ -78,11 +78,11 @@ relations:
   - kubeapi-load-balancer:website
 - - kubeapi-load-balancer:certificates
   - easyrsa:client
-#- - containerd
-#  - kubernetes-worker:container-runtime
-#- - containerd
-#  - kubernetes-master:container-runtime
-- - docker
+- - containerd
   - kubernetes-worker:container-runtime
-- - docker
+- - containerd
   - kubernetes-master:container-runtime
+#- - docker
+#  - kubernetes-worker:container-runtime
+#- - docker
+#  - kubernetes-master:container-runtime
