--- a/k8s.yaml
+++ b/k8s.yaml
@@ -5,19 +5,27 @@ variables:
 
 machines:
   '0':
-    constraints: cores=1 mem=1G root-disk=12G
+    constraints: cores=1 mem=2G root-disk=12G
     series: bionic
   '1':
-    constraints: cores=1 mem=1G root-disk=12G
+    constraints: cores=1 mem=2G root-disk=12G
     series: bionic
   '2':
-    constraints: cores=1 mem=1G root-disk=12G
+    constraints: cores=1 mem=2G root-disk=12G
     series: bionic
   '3':
-    constraints: cores=1 mem=1G root-disk=12G
+    constraints: cores=1 mem=2G root-disk=12G
+    series: bionic
+  '4':
+    constraints: cores=1 mem=2G root-disk=12G
     series: bionic
 
 services:
+  nfs:
+    charm: nfs
+    num_units: 1
+    to:
+    - 4
   # Containerd is used as container runtime
   containerd:
     charm: cs:~containers/containerd
@@ -47,6 +55,9 @@ services:
     options:
       allow-privileged: "true"
       channel: *kubernetes-channel
+      authorization-mode: RBAC
+    resources:
+      cdk-addons: 0
     to:
     - 0
   kubernetes-worker:
@@ -92,6 +103,9 @@ relations:
   - kubernetes-worker:container-runtime
 - - containerd
   - kubernetes-master:container-runtime
+
+- - nfs
+  - kubernetes-worker:nfs
 
 #- - docker
 #  - kubernetes-worker:container-runtime
