--- a/fce-training/maas.yaml
+++ b/fce-training/maas.yaml
@@ -1,7 +1,7 @@
 version: 1
 config:
   - type: physical
-    name: eth0
+    name: broam
     subnets:
       - type: static
         address: 172.16.224.2/24
