--- a/fce-training/virtvm.yaml
+++ b/fce-training/virtvm.yaml
@@ -1,11 +1,10 @@
 version: 1
 config:
   - type: physical
-    name: broam
+    name: eth0
     subnets:
       - type: static
         address: 172.16.224.3/24
-        gateway4: 172.16.224.1
-        nameservers:
-          search: [alpha.tal]
-          addresses: [172.16.224.2]
+        gateway: 172.16.224.1
+        dns_nameservers:
+        - 8.8.8.8
