Add many useful tools
* wp.sh to automatically change wallpaper
* Use C++17 by default in cppbuild
* Refactor launch-instance.sh.

--- a/cppbuild/CMakeLists.txt
+++ b/cppbuild/CMakeLists.txt
@@ -3,5 +3,9 @@ cmake_minimum_required(VERSION 3.22)
 set(CMAKE_C_COMPILER "/usr/bin/clang-17")
 set(CMAKE_CXX_COMPILER "/usr/bin/clang++-17")
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSION OFF)
+
 project(Example)
 add_executable(hello src/helloworld.cpp)
