--- a/infra/ansible/servers.ini
+++ b/infra/ansible/servers.ini
@@ -1,15 +1,5 @@
-[mon]
-192.168.100.19 hostname=mon0
-192.168.100.31 hostname=mon1
-192.168.100.58 hostname=mon2
-
-[osd]
-192.168.100.46 hostname=osd0
-192.168.100.71 hostname=osd1
-192.168.100.37 hostname=osd2
-
-[rgw]
-192.168.100.98 hostname=rgw0
+[maas]
+192.168.10.27 hostname=maas00
 
 [all:vars]
 ansible_user=ubuntu
