--- a/infra/ansible/roles/cephadm/tasks/install_docker.yml
+++ b/infra/ansible/roles/cephadm/tasks/install_docker.yml
@@ -11,7 +11,7 @@
     state: latest
     update_cache: true
 
-- name: Remove "docker." package
+- name: Remove "docker.io" package
   become: true
   ansible.builtin.apt:
     name: docker.io
