--- a/infra/cloudinit_templates/sssd-server.yaml
+++ b/infra/cloudinit_templates/sssd-server.yaml
@@ -15,17 +15,9 @@ users:
     ssh_import_id:
       - gh:telescreen
 packages:
- - crudini
- - debconf-utils
- - krb5-kdc
- - libnss-winbind
- - libpam-krb5
- - libpam-winbind
- - net-tools
- - openssh-server
- - samba
- - smbclient
- - winbind
+ - samba-ad-dc
+ - krb5-user
+ - bind9-dnsutils
 write_files:
   - path: "/tmp/krb5-config.debconf"
     permissions: "0644"
@@ -42,15 +34,21 @@ write_files:
     # execute it inside the booted, networked machine
     content: |
       #!/bin/bash
+      # Update host file
       echo '127.0.0.1 localhost' > /etc/hosts
       echo "$(hostname -I)  $(hostname) $(hostname).sts.test" >> /etc/hosts
+
+      # Update Resolver
+      sudo unlink /etc/resolv.conf
+      echo 'nameserver 127.0.0.1' > /etc/resolv.conf
+      echo 'search sts.test' >> /etc/resolv.conf
 runcmd:
   - [ /tmp/post-install.sh ]
   - [ mv, /etc/samba/smb.conf, /etc/samba/smb.conf.orig ]
   - [ mv, /etc/krb5.conf, /etc/krb5.conf.orig ]
   - [ debconf-set-selections, /tmp/krb5-config.debconf ]
   - [ dpkg-reconfigure, -fnoninteractive, krb5-config ]
-  - [ samba-tool, domain, provision, --use-rfc2307, --realm=STS.TEST, --domain=STS, "--adminpass=Passw0rd" ]
+  - [ samba-tool, domain, provision, --use-rfc2307, --realm=STS.TEST, --domain=STS, "--adminpass=Passw0rd"]
   - [ systemctl, mask, smbd, nmbd, winbind ]
   - [ systemctl, disable, smbd, nmbd, winbind ]
   - [ systemctl, stop, smbd, nmbd, winbind ]
